--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -43,7 +43,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "^2.19.0",
     "react-native-incall-manager": "^4.2.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-reanimated": "~3.10.1",
@@ -52,6 +52,7 @@
     "react-native-svg": "15.2.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
+    "stream-chat": "^8.40.9",
     "stream-chat-expo": "^5.38.0",
     "stream-chat-react-native": "^5.38.0"
   },
