--- a/eas.json
+++ b/eas.json
@@ -1,31 +1,21 @@
 {
-  "cli": {
-    "version": ">= 12.4.1",
-    "appVersionSource": "remote"
-  },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal",
-      "channel": "development"
-    },
     "preview": {
-      "distribution": "internal",
       "android": {
         "buildType": "apk"
-      },
-      "channel": "preview"
+      }
     },
-
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
     "preview3": {
       "developmentClient": true
     },
-    "production": {
-      "autoIncrement": true,
-      "channel": "production"
-    }
-  },
-  "submit": {
+    "preview4": {
+      "distribution": "internal"
+    },
     "production": {}
   }
 }
